Fix and forbid unused variable warnings
The following warnings were resolved:

-Wunused-variable
-Wunused-but-set-variable

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,8 @@ add_compile_options(-Wall -pedantic -Wextra)
 add_compile_options(-Werror=unused-label)
 add_compile_options(-Werror=unused-parameter)
 add_compile_options(-Werror=strict-prototypes)
+add_compile_options(-Werror=unused-variable)
+add_compile_options(-Werror=unused-but-set-variable)
 
 set(SOURCES
   colors.c
